Style: Fix contrast issues

--- a/src/css/dark-theme.less
+++ b/src/css/dark-theme.less
@@ -37,30 +37,6 @@ body.dark-theme {
             }
         }
     }
-    .tab-motors {
-        .plot_control {
-            .x {
-                background-color: #00A8F0;
-            }
-            .y {
-                background-color: #C0D800;
-            }
-            .z {
-                background-color: #CB4B4B;
-            }
-        }
-        .line {
-            &:nth-child(1) {
-                stroke: #00A8F0;
-            }
-            &:nth-child(2) {
-                stroke: #C0D800;
-            }
-            &:nth-child(3) {
-                stroke: #CB4B4B;
-            }
-        }
-    }
     .tab-pid_tuning {
         .profile {
             .helpicon {
@@ -90,52 +66,7 @@ body.dark-theme {
             }
         }
     }
-    .pid_roll {
-        background-color: #A00000;
-    }
-    .pid_pitch {
-        background-color: #00A000;
-    }
-    .pid_yaw {
-        background-color: #0000A0;
-    }
-    .tab-sensors {
-        .plot_control {
-            .x {
-                background-color: #00A8F0;
-            }
-            .y {
-                background-color: #C0D800;
-            }
-            .z {
-                background-color: #CB4B4B;
-            }
-        }
-        .line {
-            &:nth-child(1) {
-                stroke: #00A8F0;
-            }
-            &:nth-child(2) {
-                stroke: #C0D800;
-            }
-            &:nth-child(3) {
-                stroke: #CB4B4B;
-            }
-        }
-        .legend {
-            .item {
-                &:nth-child(1) {
-                    fill: #00A8F0;
-                }
-                &:nth-child(2) {
-                    fill: #C0D800;
-                }
-                &:nth-child(3) {
-                    fill: #CB4B4B;
-                }
-            }
-        }
-    }
+
     .invertable {
         filter: invert(1)
     }
