--- a/src/css/tabs/motors.less
+++ b/src/css/tabs/motors.less
@@ -270,17 +270,8 @@
 		}
 		.value {
 			padding: 3px;
-			color: #fff;
+			color: black;
 			border-radius: 3px;
-		}
-		.x {
-			background-color: #0000F0;
-		}
-		.y {
-			background-color: #026303;
-		}
-		.z {
-			background-color: #AB0202;
 		}
 		.rms {
 			background-color: #00D800;
@@ -319,35 +310,10 @@
 			fill: none;
 		}
 	}
-	.axis {
-		path {
-			fill: none;
-			stroke: #ccc;
-			stroke-width: 1px;
-			shape-rendering: crispEdges;
-		}
-		line {
-			fill: none;
-			stroke: #ccc;
-			stroke-width: 1px;
-			shape-rendering: crispEdges;
-		}
-	}
 	text {
 		stroke: none;
 		fill: var(--text);
 		font-size: 10px;
-	}
-	.line {
-		&:nth-child(1) {
-			stroke: #0000F0;
-		}
-		&:nth-child(2) {
-			stroke: #026303;
-		}
-		&:nth-child(3) {
-			stroke: #AB0202;
-		}
 	}
 	.motorblock {
 		margin-bottom: 0;
