--- a/src/css/tabs/pid_tuning.less
+++ b/src/css/tabs/pid_tuning.less
@@ -844,13 +844,16 @@
 	}
 }
 .pid_roll {
-	background-color: #FF8080;
+    background-color: #e24761;
 }
 .pid_pitch {
-	background-color: #80FF80;
+    background-color: #97d800;
 }
 .pid_yaw {
-	background-color: #8080FF;
+    background-color: #1fb1f0;
+}
+.pid_roll, .pid_pitch, .pid_yaw {
+    color: black;
 }
 .show {
 	width: 130px;
