--- a/src/css/tabs/sensors.less
+++ b/src/css/tabs/sensors.less
@@ -47,15 +47,6 @@
             padding: 0.25rem;
             text-align: center;
         }
-		.x {
-			background-color: #0000F0;
-		}
-		.y {
-			background-color: #026303;
-		}
-		.z {
-			background-color: #AB0202;
-		}
 	}
 	svg {
 		width: 100%;
@@ -76,50 +67,18 @@
 			fill: none;
 		}
 	}
-	.axis {
-		path {
-			fill: none;
-			stroke: #ccc;
-			stroke-width: 1px;
-			shape-rendering: crispEdges;
-		}
-		line {
-			fill: none;
-			stroke: #ccc;
-			stroke-width: 1px;
-			shape-rendering: crispEdges;
-		}
-	}
 	text {
 		stroke: none;
 		fill: var(--text);
 		font-size: 10px;
 	}
 	.line {
-		&:nth-child(1) {
-			stroke: #0000F0;
-		}
-		&:nth-child(2) {
-			stroke: #026303;
-		}
-		&:nth-child(3) {
-			stroke: #AB0202;
-		}
 		&:nth-child(4) {
 			stroke: #4DA74D;
 		}
 	}
 	.legend {
 		.item {
-			&:nth-child(1) {
-				fill: #0000F0;
-			}
-			&:nth-child(2) {
-				fill: #026303;
-			}
-			&:nth-child(3) {
-				fill: #AB0202;
-			}
 			&:nth-child(4) {
 				fill: #4DA74D;
 			}
